<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grayBackground">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="@dimen/company_card_horiz_margin">

        <android.support.v7.widget.CardView style="@style/CompanyCard">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    style="@style/CompanyCardHeader"
                    android:paddingStart="0dp"
                    android:text="@string/tariffs_title_water_services" />

                <TextView
                    style="@style/CompanyCardText"
                    android:text="@string/tariffs_description_water_services" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_water_tariffs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
        </android.support.v7.widget.RecyclerView>

        <android.support.v7.widget.CardView style="@style/CompanyCard">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    style="@style/CompanyCardHeader"
                    android:paddingStart="0dp"
                    android:text="@string/tariffs_title_sewerage_services" />

                <TextView
                    style="@style/CompanyCardText"
                    android:text="@string/tariffs_description_sewerage" />

                <TextView
                    android:id="@+id/tv_call_for_sewerage"
                    style="@style/CompanyCardHeader"
                    android:paddingStart="0dp"
                    android:paddingTop="16dp"
                    android:text="@string/tariffs_sewerage_call_for_action" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_sewage_tariffs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
</ScrollView>
