<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">

    <FrameLayout
        android:id="@+id/background"
        android:background="@color/iconPrimary"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <com.github.paolorotolo.appintro.AppIntroViewPager
        android:id="@+id/view_pager"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:id="@+id/bottom"
        android:layout_width="match_parent"
        android:layout_height="@dimen/appIntro2BottomBarHeight"
        android:layout_alignParentBottom="true"
        android:background="@android:color/transparent"
        android:gravity="bottom"
        android:orientation="vertical">

        <TextView
            android:id="@+id/bottom_separator"
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="#55000000"
            android:visibility="gone" />

        <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp">

            <FrameLayout
                android:id="@+id/indicator_container"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_gravity="center"
                android:layoutDirection="ltr" />

            <ImageButton
                android:id="@+id/skip"
                style="@style/IntroButton"
                android:layout_gravity="start"
                app:srcCompat="@drawable/ic_skip"
                android:contentDescription="@string/content_description_skip_introduction" />

            <ImageButton
                android:id="@+id/back"
                style="@style/IntroButton"
                android:layout_gravity="start"
                android:visibility="invisible"
                app:srcCompat="@drawable/ic_back"
                android:contentDescription="@string/content_description_intro_back" />

            <ImageButton
                android:id="@+id/next"
                style="@style/IntroButton"
                android:layout_gravity="end"
                app:srcCompat="@drawable/ic_next"
                android:contentDescription="@string/content_description_intro_next" />

            <ImageButton
                android:id="@+id/done"
                style="@style/IntroButton"
                android:layout_gravity="end"
                android:visibility="gone"
                app:srcCompat="@drawable/ic_tick"
                android:contentDescription="@string/content_description_intro_done" />
        </FrameLayout>
    </LinearLayout>
</RelativeLayout>
